<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/ic_news"
        android:title="@string/nav_news" />
    <item
        android:id="@+id/nav_add_friends"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/nav_add_friends" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/nac_chat" />
    <item
        android:id="@+id/nav_noti"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_notification" />
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
</menu>